scripted commit 10-Jan-2019-03:49:55